--- a/src/i18n/en/confirm-email-otp.json
+++ b/src/i18n/en/confirm-email-otp.json
@@ -1,5 +1,5 @@
 {
   "text1": "Hey!",
   "text2": "You’re almost ready to start enjoying",
-  "text3": "Simply click the big button below to verify your email address."
+  "text3": "Please verify your email by entering the OTP code below."
 }
